initial java 21+ update + Junit5